# masakari-monitors

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  bindep.txt  lower-constraints.txt  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: requirements.txt
doc/source/: README.rst  conf.py  consul-usage.rst  hostmonitor.rst  index.rst  installation.rst  instancemonitor.rst  introspectiveinstancemonitor.rst  processmonitor.rst  usage.rst
doc/source/configuration/: config.rst  index.rst  process-list.rst  sample-config.rst
doc/source/contributor/: contributing.rst
doc/source/install/: index.rst  install_and_configure.rst  install_and_configure_ubuntu.rst  overview.rst  verify.rst
doc/source/reference/: conf-file.rst  conf.rst
doc/source/user/: architecture.rst
etc/masakarimonitors/: README-masakarimonitors.conf.txt  hostmonitor.conf.sample  masakarimonitors-config-generator.conf  matrix.yaml.sample  proc.list.sample  process_list.yaml.sample  processmonitor.conf.sample
masakari-monitors/doc/source/reference/: conf.rst
masakarimonitors/: __init__.py  config.py  i18n.py  manager.py  privsep.py  service.py  utils.py  version.py
masakarimonitors/cmd/: __init__.py  hostmonitor.py  instancemonitor.py  introspectiveinstancemonitor.py  masakari-hostmonitor.sh  masakari-processmonitor.sh  processmonitor.py
masakarimonitors/common/: config.py
masakarimonitors/conf/: __init__.py  api.py  base.py  consul.py  host.py  instance.py  introspectiveinstancemonitor.py  kubernetes.py  opts.py  process.py  service.py
masakarimonitors/ha/: masakari.py
masakarimonitors/hacking/: checks.py
masakarimonitors/hostmonitor/: host.py  hostmonitor.sh
masakarimonitors/hostmonitor/consul_check/: consul_helper.py  manager.py  matrix_helper.py
masakarimonitors/hostmonitor/host_handler/: driver.py  handle_host.py  hold_host_status.py  parse_cib_xml.py  parse_crmmon_xml.py
masakarimonitors/hostmonitor/kubernetes_check/: manager.py
masakarimonitors/instancemonitor/: instance.py
masakarimonitors/instancemonitor/libvirt_handler/: callback.py  eventfilter.py  eventfilter_table.py
masakarimonitors/introspectiveinstancemonitor/: README.rst  cache.py  instance.py  qemu_utils.py  scheduler.py
masakarimonitors/objects/: event_constants.py
masakarimonitors/processmonitor/: common.sh  nova_compute_reboot_before.sh  process.py  process_status_checker.sh  processmonitor.sh
masakarimonitors/processmonitor/process_handler/: handle_process.py
masakarimonitors/tests/: test_masakarimonitors.py
masakarimonitors/tests/unit/: test_hacking.py
masakarimonitors/tests/unit/ha/: test_masakari.py
masakarimonitors/tests/unit/hostmonitor/: test_host.py
masakarimonitors/tests/unit/hostmonitor/consul_check/: test_consul_helper.py  test_manager.py  test_matrix_helper.py
masakarimonitors/tests/unit/hostmonitor/host_handler/: test_handle_host.py  test_hold_host_status.py  test_parse_cib_xml.py  test_parse_crmmon_xml.py
masakarimonitors/tests/unit/hostmonitor/kubernetes_check/: test_manager.py
masakarimonitors/tests/unit/instancemonitor/: fakes.py  test_instance.py
masakarimonitors/tests/unit/instancemonitor/libvirt_handler/: test_callback.py  test_eventfilter.py
masakarimonitors/tests/unit/introspectiveinstancemonitor/: test_monitor_manager.py  test_qemu_utils.py
masakarimonitors/tests/unit/processmonitor/: test_process.py
masakarimonitors/tests/unit/processmonitor/process_handler/: test_handle_process.py
releasenotes/notes/: bp-retry-check-when-host-failure-78649c512ef79199.yaml  bug-1866660-ef8624f5283b2e5e.yaml  bug-1878548-5fab31aec6ba5407.yaml  bug-1930361-fa8ce8e9781ea967.yaml  bug-2153543-37dd1fff76f6e531.yaml  bug-cb435fc05a5e31d5.yaml  deprecate-processmonitor-95c8aefbc749c1ed.yaml  drop-cap-net-admin-8d7d7cfb274e9547.yaml  drop-py-2-7-b28de816eac45468.yaml  hostmonitor-driver-based-on-consul-03f7e619d91e7e06.yaml  hostmonitor-driver-based-on-kubernetes-a898da08d2f40cac.yaml  hostmonitor-systemd-89696f96a654a918.yaml  introspectiveinstancemonitor-f4bc71f029b61d49.yaml  libvirt-sasl-support-edf1388c556a594b.yaml  libvirt-still-required-22a8d817ee8d0be8.yaml  pythonize-monitors-081e74dfaf78fe99.yaml
releasenotes/source/: conf.py  index.rst
