[metadata]
name = masakari-monitors
summary = Monitors for Masakari
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    masakarimonitors

scripts =
    masakarimonitors/cmd/masakari-hostmonitor.sh
    masakarimonitors/cmd/masakari-processmonitor.sh

[entry_points]
oslo.config.opts =
    masakarimonitors.conf = masakarimonitors.conf.opts:list_opts

oslo.config.opts.defaults =
    masakarimonitors.introspectiveinstancemonitor = masakarimonitors.common.config:set_middleware_defaults
    masakarimonitors.instancemonitor = masakarimonitors.common.config:set_middleware_defaults
    masakarimonitors.processmonitor = masakarimonitors.common.config:set_middleware_defaults
    masakarimonitors.hostmonitor = masakarimonitors.common.config:set_middleware_defaults

console_scripts =
    masakari-introspectiveinstancemonitor = masakarimonitors.cmd.introspectiveinstancemonitor:main
    masakari-instancemonitor = masakarimonitors.cmd.instancemonitor:main
    masakari-processmonitor = masakarimonitors.cmd.processmonitor:main
    masakari-hostmonitor = masakarimonitors.cmd.hostmonitor:main

hostmonitor.driver =
    simple = masakarimonitors.hostmonitor.host_handler.handle_host:HandleHost
    default = masakarimonitors.hostmonitor.host_handler.handle_host:HandleHost

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = masakarimonitors/locale
domain = masakarimonitors

[update_catalog]
domain = masakarimonitors
output_dir = masakarimonitors/locale
input_file = masakarimonitors/locale/masakarimonitors.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = masakarimonitors/locale/masakarimonitors.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
