[metadata]
name = masakari-monitors
summary = Monitors for Masakari
description_file =
    README.rst
author = OpenStack
author_email = openstack-dev@lists.openstack.org
home_page = https://docs.openstack.org/masakari-monitors/latest/
python_requires = >=3.8
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
    masakarimonitors

[entry_points]
oslo.config.opts =
    masakarimonitors.conf = masakarimonitors.conf.opts:list_opts

oslo.config.opts.defaults =
    masakarimonitors.introspectiveinstancemonitor = masakarimonitors.common.config:set_middleware_defaults
    masakarimonitors.instancemonitor = masakarimonitors.common.config:set_middleware_defaults
    masakarimonitors.processmonitor = masakarimonitors.common.config:set_middleware_defaults
    masakarimonitors.hostmonitor = masakarimonitors.common.config:set_middleware_defaults

console_scripts =
    masakari-introspectiveinstancemonitor = masakarimonitors.cmd.introspectiveinstancemonitor:main
    masakari-instancemonitor = masakarimonitors.cmd.instancemonitor:main
    masakari-processmonitor = masakarimonitors.cmd.processmonitor:main
    masakari-hostmonitor = masakarimonitors.cmd.hostmonitor:main

hostmonitor.driver =
    simple = masakarimonitors.hostmonitor.host_handler.handle_host:HandleHost
    default = masakarimonitors.hostmonitor.host_handler.handle_host:HandleHost
    consul = masakarimonitors.hostmonitor.consul_check.manager:ConsulCheck
